--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -61,7 +61,7 @@ locale:
 
 features:
   syntax_highlighter:
-    theme_light: github-light
+    theme_light: forest
     theme_dark: dracula
   math:
     enable: false
