--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -43,7 +43,7 @@ header:
 
 footer:
   copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
+    notice: '© {year} Timothy Rosenberg. This work is licensed under {license}'
     license:
       enable: true
       allow_derivatives: false
@@ -61,7 +61,7 @@ locale:
 
 features:
   syntax_highlighter:
-    theme_light: github_light
+    theme_light: forest-light
     theme_dark: dracula
   math:
     enable: false
