--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,12 +4,12 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Home
+  - name: About
     url: '#about'
     weight: 10
-#  - name: Posts
-#    url: '#posts'
-#    weight: 20
+  - name: Experience
+    url: '#experience'
+    weight: 20
   - name: Projects
     url: '#projects'
     weight: 30
